<resources>
    <string name="app_name">QGNetDisk</string>

    <drawable name="normal">#FFFFFF</drawable>
    <drawable name="pressed">#CCCCCC</drawable>

    <string name="title_activity_file">FileActivity</string>
    <string name="title_activity_file_list">FileListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_result">搜索结果</string>
    <string name="search">搜索</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="nickname">昵称</string>
    <string name="next">下一步</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="create_folder">新建文件夹</string>
    <string name="choiced">已选择</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="modify_password">修改密码</string>
    <string name="enter_email">请输入您的邮箱</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="enter_password">请输入新密码</string>
</resources>
