<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="60dp"
    android:paddingEnd="60dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:theme="@style/TextInputLineColor"
        app:counterOverflowTextAppearance="@style/counterOverflowTextAppearance"
        app:hintTextAppearance="@style/hintAppearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/nickname"
        android:theme="@style/TextInputLineColor"
        app:counterOverflowTextAppearance="@style/counterOverflowTextAppearance"
        app:hintTextAppearance="@style/hintAppearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_nick"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:theme="@style/TextInputLineColor"
        app:counterOverflowTextAppearance="@style/counterOverflowTextAppearance"
        app:hintTextAppearance="@style/hintAppearance"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_send"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</LinearLayout>