<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="120dp"
    android:layout_margin="10dp"
    android:background="#FFFFFF"
    app:cardCornerRadius="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/create_folder"
            android:textColor="#424242"
            android:textSize="16sp" />

        <EditText
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/create_folder" />

        <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_cancel"
            android:text="@string/cancel" />

        <Button
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_confirm"
            android:text="@string/confirm" />

    </RelativeLayout>

</android.support.v7.widget.CardView>